; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_jfs_dtree.c_next_jfs_dirent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_jfs_dtree.c_next_jfs_dirent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.jfs_dirent = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.jfs_dirent* (%struct.jfs_dirent*)* @next_jfs_dirent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.jfs_dirent* @next_jfs_dirent(%struct.jfs_dirent* %0) #0 {
  %2 = alloca %struct.jfs_dirent*, align 8
  store %struct.jfs_dirent* %0, %struct.jfs_dirent** %2, align 8
  %3 = load %struct.jfs_dirent*, %struct.jfs_dirent** %2, align 8
  %4 = bitcast %struct.jfs_dirent* %3 to i8*
  %5 = load %struct.jfs_dirent*, %struct.jfs_dirent** %2, align 8
  %6 = getelementptr inbounds %struct.jfs_dirent, %struct.jfs_dirent* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = sext i32 %7 to i64
  %9 = add i64 4, %8
  %10 = add i64 %9, 1
  %11 = add i64 %10, 4
  %12 = sub i64 %11, 1
  %13 = and i64 %12, -4
  %14 = getelementptr inbounds i8, i8* %4, i64 %13
  %15 = bitcast i8* %14 to %struct.jfs_dirent*
  ret %struct.jfs_dirent* %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
